--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "expo": "~53.0.22",
+    "expo-router": "~5.1.6",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.6"
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/axios": "^0.9.36",
     "@types/react": "~19.0.10",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.8.3"
   },
   "private": true
